# Changelog

## [v2026+1.10] - February 7, 2026

### Updated
- Contact buttons
- Projects

### Removed
- Timeline

--------------------------

### [v2026+1.9] - February 3, 2026

### Updated
- Projects

--------------------------

## [v2026+1.8] - February 1, 2026

### Fixed
- Wrong changelog versions

### Updated
- Projects

--------------------------

## [v2026+1.7] - January 28, 2026

### Fixed
- "_" in homepage icons

### Updated
- Projects

--------------------------

## [v2026+1.6] - January 27, 2026

### Updated
- Projects
- Navbar
- Homepage text

### Removed
- CNEP, McUtility, Review and "Plugin Development" from Archive
- Loading

--------------------------

## [v2026+1.5] - January 21, 2026

### Updated
- Archived projects
- All projects' versions

### Removed
- Versions of projects that dont't need versioning or versioning is NA
- Github repositories that are useless or have been archived for a long time (CNEP, InternationalMC, Valentines, review.wejkey.org)

--------------------------

## [v2026+1.4] - January 18, 2026

### Changed
- Project "Preminent Network" (Active) -> (Planning)
- Loading speed

### Updated
- About me

### Removed
- "Focus" box on homepage
- Steam and Modrinth as socials on homepage

--------------------------

## [v2026+1.3] - January 17, 2026

### Changed
- Discord link

### Removed
- review.wejkey.org

--------------------------

## [v2026+1.2] - January 11, 2026

### Fixed
- Changelog styling in some older versions (forgot "###")

### Changed
- "Check these" -> "Focus" and its projects
- Loading speed

### Updated
- About me
- Timeline

### Removed
- Preminent versioning

--------------------------

## [v2026+1.1] - January 1, 2026

### Changed
- Github link project changed to link to website of specific project

--------------------------

# END OF YEAR 2025

--------------------------

## [v2026+1.0] - December 31, 2025

Wejkey.org (wejkey.github.io/wejkeyy.github.io) exists since 2024. Thats 3 years