@@ -53,7 +53,7 @@
           <div class="hero-icons">
             <button class="icon-btn" data-copy="contact@wejkey.org" title="Copy 'contact@wejkey.org'"><i class="fas fa-envelope"></i></button>
             <a style="text-decoration: none;" class="icon-btn" href="https://github.com/wejkey" target="_blank" rel="noopener noreferrer" title="Check Github"><i class="fa-brands fa-github"></i></a>
-            <a style="text-decoration: none;" class="icon-btn" href="https://modrinth.com/user/Antarctic" target="_blank" rel="noopener noreferrer" title="Check modrinth"><i class="fa-solid fa-wrench"></i></a>
+            <a style="text-decoration: none;" class="icon-btn" href="https://modrinth.com/user/prezta" target="_blank" rel="noopener noreferrer" title="Check modrinth"><i class="fa-solid fa-wrench"></i></a>
           </div>
         </div>
       </div>
